# verbs_tgbot

./: .gitignore  list_of_irregular_verbs.txt  pyproject.toml
verbs_tgbot/: __main__.py  config_reader.py
verbs_tgbot/handlers/: add_user.py  check_verbs.py  ping.py
verbs_tgbot/services/: apsched.py  exceptions.py  irregular_verbs.py  messages.py  serializers.py  utils.py
